Adding more files